--- a/volDB/templates/results.html
+++ b/volDB/templates/results.html
@@ -1,5 +1,3 @@
-<!-- TODO: attempt to extend base.html -->
-
 {% load static %}
 <!-- load in static files for access from ./static -->
 <!doctype html>
@@ -27,7 +25,7 @@
 <body>
   <!-- Navbar -->
   <div id="nav" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-bold"> <a href="{% url 'index' %}">Voluntunity</a> </h5> 
+   <h5 class="my-0 mr-md-auto font-weight-bold"> <a href="{% url 'index' %}">Voluntunity</a> </h5> 
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="btn btn-outline-secondary" href="#">BROWSE</a>
       <a class="p-2 text-dark" href="#">ABOUT</a> <!-- use AJAX to load in about page? use pop-up? -->
@@ -35,43 +33,13 @@
     </nav>
   </div>
 
-  <!-- TODO: attempt to create 'content' block to render in base.html -->
   <!-- Landing Page -->
-  <div id="main">
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1 class="jumbotron-heading">Welcome to Voluntunity</h1>
-        <p class="lead text-muted">A tool for locating nonprofit and volunteer organizations
-          in the Williamson County, Texas area and beyond.</p>
+  <div id="main" class="container-fluid">
+    <div class="row">
+      <div class="col-7" id="resultsList">resultsList</div>
 
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">
-            <h5> I'm looking for </h5>
-          </label>
-          <select class="form-control" id="categoryDropdown">
-            <option>Any</option>
-            {% for category in categories %}
-            <option> {{ category.category }}</option>
-            {% endfor %}
-          </select>
-        </div>
-
-
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">
-            <h5> nonprofit organizations near </h5>
-          </label>
-          <select class="form-control" id="locationDropdown">
-            {% for location in locations %}
-            <option> {{ location.location }} </option>
-            {% endfor %}
-          </select>
-        </div>
-        <p>
-          <a href="{% url 'results'%}"><button class="fill">SEARCH</button></a>
-        </p>
-      </div>
-    </section>
+      <div class="col-5" id="map">map</div>
+    </div>
   </div>
   <!-- JavaScript plugins for BootStrap -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
