--- a/volDB/templates/index.html
+++ b/volDB/templates/index.html
@@ -27,7 +27,7 @@
 <body>
   <!-- Navbar -->
   <div id="nav" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-bold"> <a href="{% url 'index' %}">Voluntunity</a> </h5> 
+    <h5 class="my-0 mr-md-auto font-weight-bold"> <a href="{% url 'index' %}">Voluntunity</a> </h5>
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="btn btn-outline-secondary" href="#">BROWSE</a>
       <a class="p-2 text-dark" href="#">ABOUT</a> <!-- use AJAX to load in about page? use pop-up? -->
@@ -44,32 +44,40 @@
         <p class="lead text-muted">A tool for locating nonprofit and volunteer organizations
           in the Williamson County, Texas area and beyond.</p>
 
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">
-            <h5> I'm looking for </h5>
-          </label>
-          <select class="form-control" id="categoryDropdown">
-            <option>Any</option>
-            {% for category in categories %}
-            <option> {{ category.category }}</option>
-            {% endfor %}
-          </select>
-        </div>
+        <!-- Django form for category and location -->
+        <form action="{% url 'results' %}" method="POST">
 
+          {% comment %}
+           <div class="form-group">
+            <label for="exampleFormControlSelect1">
+              <h5> I'm looking for </h5>
+            </label>
+            <select class="form-control" id="categoryDropdown">
+              <option>Any</option>
+              {% for category in categories %}
+              <option> {{ category.category }}</option>
+              {% endfor %}
+            </select>
+          </div>
 
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">
-            <h5> nonprofit organizations near </h5>
-          </label>
-          <select class="form-control" id="locationDropdown">
-            {% for location in locations %}
-            <option> {{ location.location }} </option>
-            {% endfor %}
-          </select>
-        </div>
-        <p>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">
+              <h5> nonprofit organizations near </h5>
+            </label>
+            <select class="form-control" id="locationDropdown">
+              {% for location in locations %}
+              <option> {{ location.location }} </option>
+              {% endfor %}
+            </select>
+          </div> {% endcomment %}
+          {% csrf_token %}
+          {{ form }}
+          <button type="submit" class="fill"><span>SEARCH</span></button>
+        </form>
+
+        {% comment %} <p>
           <a href="{% url 'results'%}"><button class="fill">SEARCH</button></a>
-        </p>
+        </p> {% endcomment %}
       </div>
     </section>
   </div>
