--- a/volDB/templates/results.html
+++ b/volDB/templates/results.html
@@ -35,16 +35,17 @@
 
   <!-- Landing Page -->
   <div id="main" class="container-fluid">
-    <div class="row">
-      <div class="col-7" id="resultsList">resultsList
-      <ul>
-          {% for organization in results %}
-          <li> {{ organization.name }} </li>
-          {% endfor %}
-        <li>
-      </ul>
+    <div class="row" style="height: 100%">
+      <div class="col-sm-12 col-md-7" id="resultsList">
+      <h3> Results: </h3>
+      <!-- TODO: insert filtering row here -->
+      {% block organizationCards %}
+      {% endblock %}
       </div>
-      <div class="col-5" id="map">map</div>
+      <div class="col-sm-12 col-md-5" id="map">
+        {% comment %} WARNING: do not uncomment, or your soul will be taken
+        <img src="https://gvu.gatech.edu/sites/default/files/chad_stolper.jpg" /> {% endcomment %}
+      </div>
     </div>
   </div>
   <!-- JavaScript plugins for BootStrap -->
