--- a/volDB/templates/index.html
+++ b/volDB/templates/index.html
@@ -1,70 +1,25 @@
-<!-- TODO: attempt to extend base.html -->
+{% extends 'base.html' %}
+{% block content %}
 
-{% load static %}
-<!-- load in static files for access from ./static -->
-<!doctype html>
-<html lang="en">
+<!-- Landing Page -->
+<div id="main">
+  <section class="jumbotron text-center">
+    <div class="container">
+      <h1 class="jumbotron-heading">Welcome to Voluntunity</h1>
+      <p class="lead text-muted">A tool for locating nonprofit and volunteer organizations
+        in the Williamson County, Texas area and beyond.</p>
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <!-- Django form for category and location -->
+      <form action="{% url 'results' %}" method="POST">
+        <div class="form-group">
+          {% csrf_token %}
+          {{ form }}
+        </div>
+        <button type="submit" class="fill"><span>SEARCH</span></button>
+      </form>
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-    crossorigin="anonymous">
+    </div>
+  </section>
+</div>
 
-  <!-- Google fonts import following SU style guide -->
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700|Playfair+Display" rel="stylesheet">
-
-  <!-- custom style sheet -->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-  <title>CS Capstone 2019: Volunteer Database</title>
-
-</head>
-
-<body>
-  <!-- Navbar -->
-  <div id="nav" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-bold"> <a href="{% url 'index' %}">Voluntunity</a> </h5>
-    <nav class="my-2 my-md-0 mr-md-3">
-      <a class="btn btn-outline-secondary" href="#">BROWSE</a>
-      <a class="p-2 text-dark" href="#">ABOUT</a> <!-- use AJAX to load in about page? use pop-up? -->
-      <a class="p-2 text-dark" href="{% url 'admin:index' %}">ADMIN LOGIN</a>
-    </nav>
-  </div>
-
-  <!-- TODO: attempt to create 'content' block to render in base.html -->
-  <!-- Landing Page -->
-  <div id="main">
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1 class="jumbotron-heading">Welcome to Voluntunity</h1>
-        <p class="lead text-muted">A tool for locating nonprofit and volunteer organizations
-          in the Williamson County, Texas area and beyond.</p>
-
-        <!-- Django form for category and location -->
-        <form action="{% url 'results' %}" method="POST">
-          <div class="form-group">
-            {% csrf_token %}
-            {{ form }}
-          </div>
-          <button type="submit" class="fill"><span>SEARCH</span></button>
-        </form>
-
-      </div>
-    </section>
-  </div>
-  <!-- JavaScript plugins for BootStrap -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-
-</body>
-
-</html>
+{% endblock %}
