--- a/volDB/templates/base.html
+++ b/volDB/templates/base.html
@@ -8,15 +8,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-    crossorigin="anonymous">
-
   <!-- Google fonts import following SU style guide -->
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700|Playfair+Display" rel="stylesheet">
 
-  <!-- custom style sheet -->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <!-- Bootstrap & custom CSS -->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" >
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
   <title>CS Capstone 2019: Volunteer Database</title>
 
@@ -27,7 +24,7 @@
   <div id="nav" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-bold"> <a href="{% url 'index' %}">Voluntunity</a> </h5>
     <nav class="my-2 my-md-0 mr-md-3">
-      <a class="btn btn-outline-secondary" href="#">BROWSE</a>
+      <a class="btn btn-outline-secondary" href="{% url 'results' %}">BROWSE</a>
       <a class="p-2 text-dark" href="#">ABOUT</a> <!-- use AJAX to load in about page? use pop-up? -->
       <a class="p-2 text-dark" href="{% url 'admin:index' %}">ADMIN LOGIN</a>
     </nav>
