--- a/volDB/templates/results.html
+++ b/volDB/templates/results.html
@@ -5,14 +5,12 @@
 <div id="main" class="container-fluid">
   <div class="row" style="height: 100%">
     <div class="col-sm-12 col-md-7" id="resultsList">
-      <h3> Results: </h3>
+      <h3> Results </h3>
       <!-- TODO: insert filtering row here -->
       {% block organizationCards %}
       {% endblock %}
     </div>
     <div class="col-sm-12 col-md-5" id="map">
-      {% comment %} WARNING: do not uncomment, or your soul will be taken
-      <img src="https://gvu.gatech.edu/sites/default/files/chad_stolper.jpg" /> {% endcomment %}
     </div>
   </div>
 </div>
