added Google Maps API key and org website link open in new tab

--- a/volDB/templates/organizationCards.html
+++ b/volDB/templates/organizationCards.html
@@ -7,7 +7,7 @@
       <h5 class="card-title"><strong>{{ organization.name }}</strong></h5>
       <h6 class="card-subtitle mb-2 text-muted"> {{ organization.Location }}</h6>
       <p class="card-text"> Mission: {{ organization.mission }}</p>
-      <a href="{{ organization.website }}" class="">Website</a>
+      <a href="{{ organization.website }}" class="" target="_blank">Website</a>
     </div>
   </div>
 
