--- a/volDB/templates/base.html
+++ b/volDB/templates/base.html
@@ -43,6 +43,14 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
+  <!-- Google Maps API || NOTE: HIDE API KEY BEFORE PUSHING PRODUCTION CODE -->
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&callback=initMap">
+  </script>
+
+  <!-- Load in custom main.js file-->
+  <script type="text/javascript" src="{% static "js/main.js" %}"></script>
+
 </body>
 
 </html>
