--- a/volDB/templates/organizationCards.html
+++ b/volDB/templates/organizationCards.html
@@ -1,13 +1,24 @@
 {% extends 'results.html' %}
 {% block organizationCards %}
   <!-- for each organization/address tuple in resultsWithAddresses (see views.py) -->
-  {% for organization, address in resultsWithAddresses %}
+  {% comment %} {% for organization, address in resultsWithAddresses %}
   <div class="card result">
     <div class="card-body">
       <h5 class="card-title"><strong>{{ organization.name }}</strong></h5>
       <h6 class="card-subtitle mb-2 text-muted"> {{ organization.Location }}</h6>
       <p class="card-text"> Mission: {{ organization.mission }}</p>
       <p class="card-text"> Address: {{ address.street }} {{ address.city }}, {{ address.state }} {{ address.zipCode}}</p>
+      <a href="{{ organization.website }}" class="" target="_blank">Website</a>
+    </div>
+  </div> {% endcomment %}
+
+  <!-- Render cards without addresses: -->
+  {% for organization in results %}
+  <div class="card result">
+    <div class="card-body">
+      <h5 class="card-title"><strong>{{ organization.name }}</strong></h5>
+      <h6 class="card-subtitle mb-2 text-muted"> {{ organization.Location }}</h6>
+      <p class="card-text"> Mission: {{ organization.mission }}</p>
       <a href="{{ organization.website }}" class="" target="_blank">Website</a>
     </div>
   </div>
