--- a/volDB/templates/base.html
+++ b/volDB/templates/base.html
@@ -45,9 +45,8 @@
 
   <!-- Google Maps API || NOTE: HIDE API KEY BEFORE PUSHING PRODUCTION CODE -->
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXKsysbYwfZ89T85u9Na24a0wlUMG7Txg&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXKsysbYwfZ89T85u9Na24a0wlUMG7Txg&libraries=places&callback=initMap">
   </script>
-
   <!-- Load in custom main.js file-->
   <script type="text/javascript" src="{% static "js/main.js" %}"></script>
 
