can filter by category and location and can search specific location with Places API autocorrect

--- a/volDB/templates/base.html
+++ b/volDB/templates/base.html
@@ -45,9 +45,8 @@
 
   <!-- Google Maps API || NOTE: HIDE API KEY BEFORE PUSHING PRODUCTION CODE -->
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initMap">
   </script>
-
   <!-- Load in custom main.js file-->
   <script type="text/javascript" src="{% static "js/main.js" %}"></script>
 
