added methods for querying and made search on results page show on fewer lines

--- a/volDB/templates/index.html
+++ b/volDB/templates/index.html
@@ -13,13 +13,11 @@
       <form action="{% url 'results' %}" method="POST">
         <div class="form-group">
           {% csrf_token %}
-          {{ form }}
+          {{ indexForm }}
         </div>
         <button type="submit" class="fill"><span>SEARCH</span></button>
       </form>
 
-    </div>
-    <div class="col-sm-12 col-md-5" id="map">
     </div>
   </section>
 </div>
