--- a/volDB/templates/results.html
+++ b/volDB/templates/results.html
@@ -5,14 +5,14 @@
 <div id="main" class="container-fluid">
   <!-- TODO: insert filtering row here -->
   <form action="{% url 'results' %}" method="POST">
-    <div class="form-group">
+    <div class="form-group refine-search">
       {% csrf_token %}
-      {{ form }}
+      {{ filterForm }}
     </div>
     <!--
     <p>Search from Location: </p><input type="text" class="form-group" name="location" id="searchLocation">
     <p>Distance: </p><input type="text" class="form-group" name="distance"> -->
-    <button type="submit" class="fill"><span>SEARCH</span></button>
+    <button type="submit" class="fill refine-search"><span>SEARCH</span></button>
   </form>
   <div class="row" style="height: 100%">
     <div class="col-sm-12 col-md-7" id="resultsList">
