search bar on results page improvement

--- a/volDB/static/css/style.css
+++ b/volDB/static/css/style.css
@@ -59,6 +59,23 @@ a:hover {
   -moz-transition:    0.75s ease;
   -webkit-transition: 0.75s ease;
 }
+
+/* --------- RESULTS PAGE SEARCH FORM --------- */
+li {
+  text-decoration: none;
+  display: inline;
+  margin: 0 1%;
+  float: left;
+}
+.search-bar {
+  width: 100%;
+  margin: 0 auto;
+}
+.submit-bar {
+  margin-top: 0;
+  margin-left: 3%;
+}
+
 /* --------- BUTTON STYLE ---------  */
 /* button styling and fill inspired from https://codepen.io/anon/pen/MxYBMq 
   designed to match Southwestern's style guide */
