added capability for multiple forms

--- a/volDB/templates/index.html
+++ b/volDB/templates/index.html
@@ -15,7 +15,7 @@
           {% csrf_token %}
           {{ indexForm }}
         </div>
-        <button type="submit" class="fill"><span>SEARCH</span></button>
+        <button type="submit" class="fill" name="landingPageSearch"><span>SEARCH</span></button>
       </form>
 
     </div>
