--- a/volDB/static/css/style.css
+++ b/volDB/static/css/style.css
@@ -120,6 +120,10 @@ button:hover{
   top: 0;
 }
 
+/* --------- MODAL BUTTON STYLE ---------  */
+.button-text-height {
+  height: 70px;
+}
 /* Mobile media query */
 
 @media only screen and (max-width: 600px) {
