--- a/volDB/templates/organizationCards.html
+++ b/volDB/templates/organizationCards.html
@@ -18,8 +18,9 @@
     <div class="card-body">
       <h5 class="card-title"><strong>{{ organization.name }}</strong></h5>
       <h6 class="card-subtitle mb-2 text-muted"> {{ organization.Location }}</h6>
-      <p class="card-text"> Mission: {{ organization.mission }}</p>
-      <a href="{{ organization.website }}" class="" target="_blank">Website</a>
+      <p class="card-text"> <b>Mission:</b> {{ organization.mission }}</p>
+      <p class="card-opp"> <b>Volunteering Opportunities:</b> {{ organization.opportunities }}</p>
+      <a href="{{ organization.website }}"  id="website_link" target="_blank"><button type="button" class="fill">Website</button></a>
     </div>
   </div>
 
