--- a/volDB/templates/results.html
+++ b/volDB/templates/results.html
@@ -3,17 +3,27 @@
 
 <!-- Results Page -->
 <div id="main" class="container-fluid">
-  <!-- TODO: insert filtering row here -->
-  <form action="{% url 'results' %}" method="POST" class="search-bar"> 
-    <div class="form-group refine-search">
-      {% csrf_token %}
-      {{ filterForm.as_ul }}
-    </div>
-    <!--
-    <p>Search from Location: </p><input type="text" class="form-group" name="location" id="searchLocation">
-    <p>Distance: </p><input type="text" class="form-group" name="distance"> -->
-    <button type="submit" class="fill submit-bar" name="refineSearch"><span>SEARCH</span></button>
-  </form>
+<!-- TODO: insert filtering row here -->
+  <form action="{% url 'results' %}" method="POST"> 
+      <div class="refine-search-bar">
+        {% csrf_token %}
+        <!---->
+        <table>
+          <tr>
+            <td class="col-md-2">Category</td>
+            <td class="col-md-2">{{ filterForm.category }}</td>
+            <td class="col-md-2">Location</td>
+            <td class="col-md-2">{{ filterForm.myLocation }}</td>
+            <td class="col-md-2">Radius</td>
+            <td class="col-md-2">{{ filterForm.radius }}</td>
+            <td class="col-md-2"><button type="submit" class="fill submit-bar" name="refineSearch"><span>SEARCH</span></button></td>
+          </tr>
+          <!-- {{ filterForm.as_table }} -->
+        </table>
+      </div>
+    </form>
+
+  
   <div class="row" style="height: 100%">
     <div class="col-sm-12 col-md-7" id="resultsList">
       <h3> Results </h3>
