--- a/volDB/templates/base.html
+++ b/volDB/templates/base.html
@@ -25,7 +25,7 @@
     <h5 class="my-0 mr-md-auto font-weight-bold"> <a href="{% url 'index' %}">Voluntunity</a> </h5>
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="btn btn-outline-secondary" href="{% url 'results' %}">BROWSE</a>
-      <a class="p-2 text-dark" href="#" id="aboutButton">ABOUT</a> <!-- use AJAX to load in about page? use pop-up? -->
+      <a class="p-2 text-dark" href="#" id="howToButton">HOWTO</a> <!-- use AJAX to load in about page? use pop-up? -->
       <a class="p-2 text-dark" href="{% url 'admin:index' %}">ADMIN LOGIN</a>
     </nav>
   </div>
