--- a/volDB/templates/base.html
+++ b/volDB/templates/base.html
@@ -26,6 +26,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="btn btn-outline-secondary" href="{% url 'results' %}">BROWSE</a>
       <a class="p-2 text-dark" href="#" id="howToButton">HOW TO</a> <!-- use AJAX to load in about page? use pop-up? -->
+      <a class="p-2 text-dark" href=https://www.southwestern.edu/community-engaged-learning/ target="_blank">CONTACT US</a>
       <a class="p-2 text-dark" href="{% url 'admin:index' %}">ADMIN LOGIN</a>
     </nav>
   </div>
