--- a/volDB/templates/organizationCards.html
+++ b/volDB/templates/organizationCards.html
@@ -19,13 +19,21 @@
       <h5 class="card-title"><strong>{{ organization.name }}</strong></h5>
       <h6 class="card-subtitle mb-2 text-muted"> {{ organization.Location }}</h6>
       <p class="card-text"> <b>Mission:</b> {{ organization.mission }}</p>
-      {% if organization.opportunities is Null %} 
-      {% comment %} <p class="card-opp"> <b>MEMES:</b> {{ organization.opportunities }}</p> {% endcomment %}
+
+     {% comment %} {{ Book.objects.filter(author__isnull=True). }}  {% endcomment %}
+
+      {% if organization.opportunities is " " %} 
+      <p class="card-opp"> <b>MEMES:</b> {{ organization.opportunities }}</p>
       {% else %}
       <p class="card-opp"> <b>Volunteering Opportunities:</b> {{ organization.opportunities }}</p>
       {% endif %}
+      {% comment %} TODO:  if it's . don't display website {% endcomment %}
       {% comment %} {{ print(organization.opportunities) }} {% endcomment %}
+      {% if organization.website is '.' %}
+
+      {% else %}
       <a href="{{ organization.website }}"  id="website_link" target="_blank"><button type="button" class="fill">Website</button></a>
+      {% endif %}
     </div>
   </div>
 
