Fixed broken urls closes #19

--- a/volDB/templates/organizationCards.html
+++ b/volDB/templates/organizationCards.html
@@ -20,7 +20,7 @@
       <h6 class="card-subtitle mb-2 text-muted"> {{ organization.Location }}</h6>
       <p class="card-text"> <b>Mission:</b> {{ organization.mission }}</p>
       <p class="card-opp"> <b>Volunteering Opportunities:</b> {{ organization.opportunities }}</p>
-      <a href="{{ organization.website }}"  id="website_link" target="_blank"><button type="button" class="fill">Website</button></a>
+      <a href="{{ organization.website }}" class="website_link" target="_blank"><button type="button" class="fill">Website</button></a>
     </div>
   </div>
 
