Filter bar css/card URL fix

--- a/volDB/static/css/style.css
+++ b/volDB/static/css/style.css
@@ -33,6 +33,7 @@ a:hover {
   background-color: peachpuff;
   min-height: 88vh;
   overflow-y: auto;
+  margin-top: 5px;
 }
 
 #resultsList {
@@ -66,8 +67,26 @@ a:hover {
 
 /* --------- RESULTS PAGE SEARCH FORM --------- */
 .refine-search-bar {
-  width: 70%;
+  width: 100%;
 }
+
+#filterBar {
+  height: 100px;
+  background: whitesmoke;
+  width: 100%;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+#filterBarContent {
+  width: 100%;
+}
+
+/* #filterBarContent form {
+  position: relative;
+  left: 10%;
+  margin: auto 0;
+} */
 
 /* --------- BUTTON STYLE ---------  */
 /* button styling and fill inspired from https://codepen.io/anon/pen/MxYBMq 
@@ -139,5 +158,21 @@ button:hover{
   #resultsList {
     padding: 10px;
     max-height: 50vh;
+    position: relative;
+    /* top: 300px; */
+  }
+
+  #filterBar {
+    height: 320px;
+  }
+
+  #filterBarContent {
+    margin: auto 0;
+    position: relative;
+    left: 0;
+  }
+
+  .fill {
+    width: 97%;
   }
 }
