custom login page

--- a/volDB/templates/registration/logout.html
+++ b/volDB/templates/registration/logout.html
@@ -5,7 +5,7 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">You have been successfully logged out!</h1>
-        <a href="{% url 'admin:index' %}"><button type="submit" class="fill"><span>LOGIN</span></button></a>
+        <a href="{% url 'login' %}"><button type="submit" class="fill"><span>LOGIN</span></button></a>
         <a href="{% url 'index' %}"><button type="submit" class="fill"><span>HOME</span></button></a>
       </div>
     </section>
