--- a/volDB/templates/organizationCards.html
+++ b/volDB/templates/organizationCards.html
@@ -1,17 +1,29 @@
 {% extends 'results.html' %}
 {% block organizationCards %}
-  <!-- for each organization/address tuple in resultsWithAddresses (see views.py) -->
-  {% comment %} {% for organization, address in resultsWithAddresses %}
-  <div class="card result">
-    <div class="card-body">
-      <h5 class="card-title"><strong>{{ organization.name }}</strong></h5>
-      <h6 class="card-subtitle mb-2 text-muted"> {{ organization.Location }}</h6>
-      <p class="card-text"> Mission: {{ organization.mission }}</p>
-      <p class="card-text"> Address: {{ address.street }} {{ address.city }}, {{ address.state }} {{ address.zipCode}}</p>
-      <a href="{{ organization.website }}" class="" target="_blank">Website</a>
-    </div>
-  </div> {% endcomment %}
+  <!-- display search criteria from previous search -->
+    {% if category == None %}
+      <span class="col-sm-12 col-md-3 display-results">Any Category</span>
+    {% else %}
+      <span class="col-sm-12 col-md-3 display-results">Category: {{ category }}</span>
+    {% endif %}
+    {% if location != None %}
+      <span class="col-sm-12 col-md-3 display-results">{{ location }}</span>
+      {% if radius != 0%}
+        <span class="col-sm-12 col-md-3 display-results">Radius: {{ radius }}</span>
+      {% endif %}
+    {% endif %}
 
+    <!-- for each organization/address tuple in resultsWithAddresses (see views.py) -->
+    {% comment %} {% for organization, address in resultsWithAddresses %}
+    <div class="card result">
+      <div class="card-body">
+        <h5 class="card-title"><strong>{{ organization.name }}</strong></h5>
+        <h6 class="card-subtitle mb-2 text-muted"> {{ organization.Location }}</h6>
+        <p class="card-text"> Mission: {{ organization.mission }}</p>
+        <p class="card-text"> Address: {{ address.street }} {{ address.city }}, {{ address.state }} {{ address.zipCode}}</p>
+        <a href="{{ organization.website }}" class="" target="_blank">Website</a>
+      </div>
+    </div> {% endcomment %}
   <!-- Render cards without addresses: -->
   {% for organization in results %}
   <div class="card result">
