--- a/volDB/templates/organizationCards.html
+++ b/volDB/templates/organizationCards.html
@@ -32,6 +32,7 @@
       <h6 class="card-subtitle mb-2 text-muted"> {{ organization.Location }}</h6>
       <p class="card-text"> <b>Mission:</b> {{ organization.mission }}</p>
 
+    {% comment %} moar comments yay {% endcomment %}
      {% comment %} {{ Book.objects.filter(author__isnull=True). }}  {% endcomment %}
 
       {% if organization.opportunities == "." %} 
