Re-render map with basic latitude/longitude avg

--- a/volDB/templates/base.html
+++ b/volDB/templates/base.html
@@ -67,8 +67,8 @@
             address.fields.state + ' ' + address.fields.zipCode
         })
       })
-      console.log("Output from jsonPass function in base.html: ")
-      console.log(jsonData);
+      // console.log("Output from jsonPass function in base.html: ")
+      // console.log(jsonData);
 
       return jsonData;
     }
