removed custom location and radius option on refine search

--- a/volDB/templates/results.html
+++ b/volDB/templates/results.html
@@ -10,7 +10,7 @@
   <form action="{% url 'results' %}" method="POST"> 
         {% csrf_token %}
         {{ filterForm }}
-        <button type="submit" class="fill col-sm-2" name="refineSearch"><span>SEARCH</span></button>
+        <button type="submit" class="fill col-sm-2" name="refineSearch"><span>REFINE SEARCH</span></button>
     </form>
     </div>
   </div>
