--- a/volDB/templates/organizationCards.html
+++ b/volDB/templates/organizationCards.html
@@ -35,7 +35,7 @@
     {% comment %} moar comments yay {% endcomment %}
      {% comment %} {{ Book.objects.filter(author__isnull=True). }}  {% endcomment %}
 
-      {% if organization.opportunities == "." or organization.opportunites == "" %} 
+      {% if organization.opportunities == "." or organization.opportunites == '' %} 
        <p class="card-opp"> <b>Volunteering Opportunities:</b> N/A</p>
       {% else %}
       <p class="card-opp"> <b>Volunteering Opportunities:</b> {{ organization.opportunities }}</p>
