--- a/volDB/templates/base.html
+++ b/volDB/templates/base.html
@@ -52,7 +52,7 @@
       <a class="btn btn-outline-secondary" href="{% url 'results' %}">BROWSE</a>
       <a class="p-2 text-dark" href="#" id="howToButton">HOW TO</a> <!-- used sweetalert2 to create pop up -->
       <a class="p-2 text-dark" href=https://www.southwestern.edu/community-engaged-learning/ target="_blank">CONTACT US</a>
-      <a class="p-2 text-dark" href="{% url 'admin:index' %}">ADMIN LOGIN</a>
+      <a class="p-2 text-dark" href="{% url 'login' %}">ADMIN LOGIN</a>
     </nav>
   </div>
 
