--- a/volDB/templates/organizationCards.html
+++ b/volDB/templates/organizationCards.html
@@ -3,12 +3,14 @@
   <!-- display search criteria from previous search -->
   <span id="resultsBadges">
     {% if category == None %}
-      <span class="col-sm-12 col-md-3 display-results">Any Category</span>
+      <span class="col-sm-12 col-md-5 display-results">Any Category</span>
     {% else %}
-      <span class="col-sm-12 col-md-3 display-results"><strong>Category:</strong> {{ category }}</span>
+      <span class="col-sm-12 col-md-5 display-results"><strong>Category:</strong> {{ category }}</span>
     {% endif %}
     {% if location != None %}
-      <span class="col-sm-12 col-md-3 display-results">{{ location }}</span>
+      <span class="col-sm-12 col-md-5 display-results"><strong>In </strong>{{ location }}</span>
+    {% else %}
+      <span class="col-sm-12 col-md-5 display-results">Any Location</span>
     {% endif %}
   </span>
 
