restyle refine search colors

--- a/volDB/static/css/style.css
+++ b/volDB/static/css/style.css
@@ -73,7 +73,7 @@ a:hover {
 
 #filterBar {
   height: 100px;
-  background: whitesmoke;
+  background: #e9ecef;
   width: 100%;
   padding: 5px;
   border-radius: 5px;
