Added comments to main.js and base.html for HOW TO pop up and CONTACT US Button, as well as commented out the button height for confirmButtonClass referenced from style.css which was leftover from the REFINE SEARCH pop up.

--- a/volDB/static/css/style.css
+++ b/volDB/static/css/style.css
@@ -176,9 +176,11 @@ button:hover{
 
 
 /* --------- MODAL BUTTON STYLE ---------  */
+/*
 .button-text-height {
   height: 70px;
 }
+*/
 
 /* Mobile media query */
 
