Added comments to main.js and base.html for HOW TO pop up and CONTACT US Button, as well as commented out the button height for confirmButtonClass referenced from style.css which was leftover from the REFINE SEARCH pop up.

--- a/volDB/templates/base.html
+++ b/volDB/templates/base.html
@@ -105,7 +105,7 @@
     const jsonTest = jsonPass({{ json_data | safe }}, jsonData);
   </script>
 
-  <!-- Load in custom main.js file-->
+  <!-- Load in sweetalert2 website and custom main.js file-->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   <script type="text/javascript" src="{% static "js/main.js" %}"></script>
 
