added comments and removed unused lines

--- a/volDB/templates/results.html
+++ b/volDB/templates/results.html
@@ -3,7 +3,7 @@
 
 <!-- Results Page -->
 <div id="main" class="container-fluid">
-
+<!-- Refine Search Bar -->
 {% comment %} <section class="jumbotron" id="filterBar"> {% endcomment %}
   <div id="filterBar" class="form-row align-items-center">
   <div id="filterBarContent">
@@ -15,7 +15,7 @@
     </div>
   </div>
   {% comment %} </section> {% endcomment %}
-  
+  <!-- Display Organization Cards and Map -->
   <div class="row" style="height: 100%">
     <div class="col-sm-12 col-md-7" id="resultsList">
       <h3> Results </h3>
